--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@ body, html, #root {
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: sans-serif;
+  min-height: 100vh;
 }
